[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[features]
integration_tests = []

[dependencies]
async-trait = "0.1"
bytes = "1.1"
clap = { version = "3.0", default_features = false, features = ["std", "env"] }
eyre = "0.6"
futures = "0.3"
grapl-config = { path = "../grapl-config" }
grapl-tracing = { path = "../grapl-tracing" }
grapl-utils = { path = "../grapl-utils" }
kafka = { path = "../kafka", features = ["test-utils"] }
plugin-work-queue = { path = "../plugin-work-queue", features = ["test-utils"] }
rust-proto = { path = "../rust-proto" }
test-context = "0.1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true }
