[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[features]
integration_tests = []

[dependencies]
bytes = { workspace = true }
eyre = { workspace = true }
futures = "0.3"
integration-test-utils = { path = "../integration-test-utils" }
kafka = { path = "../kafka", features = ["test-utils"] }
plugin-work-queue = { path = "../plugin-work-queue", features = ["test-utils"] }
rust-proto = { path = "../rust-proto" }
test-context = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
