[package]
name = "endpoint-plugin"
version = "0.1.0"
authors = ["colin <colin@graplsecurity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
grapl-graph-descriptions = { path = "../graph-descriptions", version = "*" }
derive-dynamic-node = { path = "../derive-dynamic-node" }
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1.0"
