[package]
name = "endpoint-plugin"
version = "0.1.0"
authors = ["colin <colin@graplsecurity.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive-dynamic-node = { path = "../derive-dynamic-node" }
rust-proto = { path = "../rust-proto", version = "*" }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
